# ckg-pt-py

./: README.md  pyproject.toml
db/profiles/: citizen-a.json  citizen-b.json
db/queries/: ecar-funding.json  solar-funding.json  solar-funding_bu.json
src/: lib.py  main.py  validator.py
src/models/: car.py  constraint.py  entity_type.py  house.py  person.py  person_query.py  personal_data.py  property.py  query.py
