[tool.poetry]
name = "ckg-pt-py"
version = "0.1.0"
description = ""
authors = ["wbglaeser <ben.glaeser@tuta.io>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
pyshacl = "^0.25.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
